# LiveKit-Agent-Low-Latency-for-Brasil-

./: README.md  agent_manager.py  cli.py  config.py  main.py  pyproject.toml  test_console.py
src/: agent.py
