[tool.poetry]
name = "vendor-platform"
version = "1.0.0"
description = "Plataforma de backend para orquestração de Agentes de Voz com IA."
authors = ["Gowdak"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
livekit-agents = ">=0.6.0"
python-dotenv = "^1.0.1"
livekit-plugins-elevenlabs = "^0.2.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
click = "^8.1.7"
requests = "^2.31.0"
livekit-api = "^1.1.2"
numpy = "^1.26.4"
ten-vad = {git = "https://github.com/TEN-framework/ten-vad.git"}

[tool.poetry.scripts]
iniciar-servidor = "cli:iniciar_servidor"
novo-agente = "cli:novo_agente"
iniciar-agente = "cli:iniciar_agente"
listar-agentes = "cli:listar_agentes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"